2008-10-30  Michael Natterer  <mitch@imendio.com>

	* gtk/*.h: no need to include <gtk/gtkenums.h> in headers which
	somehow include gtkobject.h or another header which includes it.

2008-10-30  Marek Kasik  <mkasik@redhat.com>

	Bug 339714 - Set printer dpi on cairo ps/pdf surfaces when printing

	* gtk/gtk.symbols
	* gtk/gtkprintsettings.c
	* gtk/gtkprintsettings.h
	* docs/reference/gtk/gtk-sections.txt
	* modules/printbackends/file/gtkprintbackendfile.c
	* modules/printbackends/test/gtkprintbackendtest.c
	* modules/printbackends/cups/gtkprintbackendcups.c
	* modules/printbackends/lpr/gtkprintbackendlpr.c:
	Added lpi (lines per inch) setting to GtkPrintSettings and support
	for anamorphic dpi. Surface fallback resolution is set to 2*lpi.

2008-10-30  Michael Natterer  <mitch@imendio.com>

	* gtk/*.h: no need to include <gdk/gdk.h> in any widget header,
	it's included via gtkwidget.h anyway.

2008-10-30  Sven Neumann  <sven@gimp.org>

	* gtk/gtkwidget.c (gtk_widget_get_property): removed redundant
	conditional.

2008-10-30  Christian Dywan  <christian@imendio.com>

	Bug 557316 – GtkLinkButton should consider user-defined tooltip

	* gtk/gtklinkbutton.c (gtk_link_button_query_tooltip_cb):
	Only override the tooltip if not previously set

2008-10-29  Christian Dywan  <christian@imendio.com>

	Bug 557762 – Misleading error message in GDK DirectFB

	* gdk/directfb/gdkdisplay-directfb.c (gdk_display_open):
	Correctly say GetInputDevice instead of GetDisplayLayer

2008-10-29  Christian Dywan  <christian@imendio.com>

	Bug 558397 – gtk_widget_error_bell undefined without a screen

	* gtk/gtkwidget.c (gtk_widget_error_bell): Test the settings
	instance and return silently if unset

2008-10-28  Michael Natterer  <mitch@imendio.com>

	* gdk/keyname-table.h: fix small typo.

2008-10-27  Richard Hult  <richard@imendio.com>

	Bug 557894 – Wrong return value for
	gdk_pointer_grab_info_libgtk_only()

	* gdk/quartz/gdkevents-quartz.c: