@@ -24,7 +24,7 @@
 #ifndef __GTK_CELL_RENDERER_TEXT_H__
 #define __GTK_CELL_RENDERER_TEXT_H__
 
-#include <pango/pango.h>
+
 #include <gtk/gtkcellrenderer.h>
 
 
